Blender Shuts down when rendering duplicated smoke domain. #52533

Closed
opened 2017-08-25 07:01:06 +02:00 by pranavjit virdi · 10 comments

System Information
Win10 64-bit , Nvidea Quadro K2000

Blender Version
Broken: Blender 2.79rc2 7b397cd , Blender 2.78c official release

Short description of error
i duplicated a baked domain object and placed it aside of the original one
(i was trying to see whether bender could use the same baked data so i dont have to use 20 different simulations)
but whenever i try to switch to render viewport or hit f12 to render it shuts down immediately

Exact steps for others to reproduce the error
In the .blend file

  1. Select the domain object and bake all dynamics
  2. Duplicate the domain object
  3. Place it to the side
  4. go the render viewport or render by f12

here's the .blend CloudTest_2.blend

**System Information** Win10 64-bit , Nvidea Quadro K2000 **Blender Version** Broken: Blender 2.79rc2 7b397cd , Blender 2.78c official release **Short description of error** i duplicated a baked domain object and placed it aside of the original one (i was trying to see whether bender could use the same baked data so i dont have to use 20 different simulations) but whenever i try to switch to render viewport or hit f12 to render it shuts down immediately **Exact steps for others to reproduce the error** In the .blend file 1. Select the domain object and bake all dynamics 2. Duplicate the domain object 3. Place it to the side 4. go the render viewport or render by f12 here's the .blend [CloudTest_2.blend](https://archive.blender.org/developer/F724865/CloudTest_2.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PranavjitVirdi

Added subscriber: @PranavjitVirdi

Added subscriber: @dfelinto

Added subscriber: @dfelinto

It was working on v2.78a, and broken on v2.78c.

It was working on v2.78a, and broken on v2.78c.
Sergey Sharybin was assigned by Dalai Felinto 2017-08-29 16:33:24 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

And the bug was introduced on 272412f9c0.

And the bug was introduced on 272412f9c0.

This issue was referenced by blender/cycles@5238b1982e

This issue was referenced by blender/cycles@5238b1982e2bc6ffece69e4831bf9abb93420c5d

This issue was referenced by blender/cycles@0ea653a16d

This issue was referenced by blender/cycles@0ea653a16d29ab92b22d10ff622aaecaabbce7ae

This issue was referenced by 33249f6987

This issue was referenced by 33249f698780291a0de276d9df36c1d2473667e6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52533
No description provided.