Fix T52533: Blender shuts down when rendering duplicated smoke domain